--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Learning Angular 2 <small>Chapter 02</small></h1>
+      <h1>Angular 2 Demo <small>Fruits!</small></h1>
       <my-app>Loading ...</my-app>
     </div>
   </body>
